fixed css, now finish Readme and fix Header alignment

--- a/pokedex_client/public/style.css
+++ b/pokedex_client/public/style.css
@@ -1,31 +1,34 @@
 /* for development - check layout */
 /* comment out */
-/* header, div, main, nav, aside, footer {
+ /* header, div, main, nav, aside, footer {
   border: 1px solid red;
-} */
+}  */
+
+header {
+  text-align: center;
+  font-size: 100px;
+  color: #4d5052;
+}
 
 body {
     display: flex;
     min-height: 100vh;
     flex-direction: column;
     background-color: #FAEBD7;
-    font-family: Verdana, Geneva, sans-serif;
   }
   
   .container {
     display: flex;
     flex: 1;
-    flex-direction: column;
-    background-color: #FEFBF7;
+    flex-direction: row-reverse;
+    background-color: #d20923;
     border-radius: 5px;
   }
   
-  header {
+  h4 {
     text-align: center;
-    font-size: 50px;
-    color: #4d5052;
   }
-  
+
   main {
     flex: 1;
   }
@@ -35,10 +38,11 @@ body {
   }
   
   nav, aside {
-    background-color: #C2C8CD;
+    background-color: #d20923;
   }
-  
+
   form {
+    font-size: 20px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -58,12 +62,18 @@ body {
     text-align: center;
   }
   .pokemon {
-    margin: 5px;
-    padding: 5px 15px 5px 15px;
-    background-color: #E4E1DE;
+    margin: 10px 0;
+    padding: 10px 5px;
+    background-color: #28aafd;
     border-radius: 5px;
+    text-align: center;
+    justify-content: center;
   }
-  
+
+  .submit {
+    background-color: #51ae5f;
+  }
+
   @media (min-width: 768px) {
     .container {
       flex-direction: row;
